Implement Levels, fixes #19 (#56)
* add failing tests for levels

* rename test configs, use array as values

* implement levels

* add test for invalid type

* add levels to non test yaml

* fix levels working properly, rename values in yml

--- a/config/gamification.yml
+++ b/config/gamification.yml
@@ -1,5 +1,9 @@
 # define context fields?
 
+levels:
+    type: manual
+    steps: [100,250,400,750,1100]
+
 XPs:
     # XP is predefined
     - postXP
