--- a/docs/yaml_general.yml
+++ b/docs/yaml_general.yml
@@ -3,6 +3,17 @@ XPs:
     # general "XP" is predefined
     yourXP
 
+levels:
+    # there are three different ways to define levels:
+    type: manual
+    steps: [10,100,1000] # levels at 0, 10, 100, 1000
+    # OR
+    type: linear
+    interval: 100 # levels at 0, 100, 200, 300 ...
+    # OR
+    type: exponential
+    starting_value: 100 # levels at 0, 100, 200, 400 ...
+
 events:
     YourEventName:
         actions:
