--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "dev": "nodemon npm start"
   },
   "nodemonConfig": {
-    "ignore": ["test/*", "docs/*"]
+    "ignore": [
+      "test/*",
+      "docs/*"
+    ]
   },
   "dependencies": {
     "@feathersjs/configuration": "^1.0.2",
@@ -48,6 +51,7 @@
     "js-yaml": "^3.11.0",
     "mongoose": "^5.1.3",
     "serve-favicon": "^2.5.0",
+    "swagger-ui-express": "^3.0.10",
     "winston": "^2.4.2"
   },
   "devDependencies": {
