--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
     "prefer-arrow-callback": "error",
     "no-trailing-spaces": "error",
     "comma-dangle": ["error", "never"],
-    "prefer-const": "error"
+    "prefer-const": "error",
+    "no-path-concat": "error"
   }
 }
