awardee gets awarded xp when awardee is specified in the awardee_id field
Co-Authored-By: Kim Borchart <Kim-Pascal.Borchart@student.hpi.de>

--- a/test/config/xp-rule-checker-config.yml
+++ b/test/config/xp-rule-checker-config.yml
@@ -7,6 +7,12 @@ events:
             - xp:
                 name: XP
                 amount: 10
+    EventGiving10XPForPoster:
+        actions:
+            - xp:
+                name: XP
+                amount: 10
+                awardee_id: poster_id
     EventGiving25NonStandardXP:
         actions:
             - xp:
