--- a/config/gamification.yml
+++ b/config/gamification.yml
@@ -14,6 +14,7 @@ events:
             - xp:
                 name: postXP
                 amount: 1
+                awardee_id: poster_id
             - xp:
                 name: XP
                 amount: 10
