"meta" translated in English :)

--- a/config/gamification.yml
+++ b/config/gamification.yml
@@ -50,13 +50,12 @@ achievements:
                             value: hobbit
 
     CommunicatorBronze:
-        #meta de mai jos e definit ca un Map/(HashTable)/Key:value. Daca punem "-" in fata key, rezultatul va fi un vector de obiecte [ { culoare: '#890123' }, ...] ceea ce nu vrem...
         meta:
             color: "#890123"
             image: "https://econ.unitbv.ro/images/UNIVTB-01.png"
             details: "bla bla 1"
-            title: "un nou inceput!"
-            desc: "d sakldl ksf nsdkjfs nfkjsd nfk js nfksj f nskjfsd kjfs"
+            title: "Let's define a title"
+            desc: "This is a very long description for CommunicatorBronze"
         requirements:
             - xp:
                 name: postXP
@@ -69,11 +68,11 @@ achievements:
 
     CommunicatorSilver:
         meta:
-            culoare: "#AA00AA"
-            imagine: "https://econ.unitbv.ro/images/UNIVTB-01.png"
-            detaliu: "bla bla 2"
-            title: "sa continuam!"
-            desc: "alta descriere jmekera"
+            color: "#AA00AA"
+            image: "https://econ.unitbv.ro/images/UNIVTB-01.png"
+            details: "bla bla 2"
+            title: "Let's define a title: CommunicatorSilver"
+            desc: "This is a very long description for CommunicatorSilver"
         requirements:
             - achievement:
                 name: CommunicatorBronze
