Use `npm install` when running Greenkeeper
Otherwise we run into this issue: https://github.com/greenkeeperio/greenkeeper-lockfile/issues/156

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ cache:
   directories:
     - "$HOME/.npm"
 
-install:
-  - npm ci
+install: case $TRAVIS_BRANCH in greenkeeper*) npm i;; *) npm ci;; esac;
 
 before_install:
   - npm i -g npm@6.1.0
